# tts_core

./: README.md  tree.py
tts_core/: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
tts_core/cache/: .gitkeep  cache_config.yaml  cache_manager.py
tts_core/configs/: .gitkeep  default_settings.json  tts_config.yaml
tts_core/configs/env/: .gitkeep  dev_env.yaml  env_notes.txt  prod_env.yaml
tts_core/configs/templates/: .gitkeep  template_config.yaml  template_variables.json
tts_core/docs/: .gitkeep
tts_core/docs/api/: .gitkeep  api_overview.md  authentication_guide.txt  tts_api_endpoints.yaml
tts_core/docs/architecture/: .gitkeep  architecture_notes.txt  diagram_instructions.md  tts_system_overview.mmd
tts_core/docs/security/: .gitkeep  data_privacy.yaml  (+2 more)
tts_core/integration/: .gitkeep
tts_core/language_support/: .gitkeep  lang_mapping.yaml  supported_languages.json
tts_core/models_en/: .gitkeep  en_feature_extractor.py  english_model_info.txt
tts_core/models_generic/: .gitkeep  generic_feature_extractor.py  generic_model_notes.txt
tts_core/models_ru/: .gitkeep  ru_feature_extractor.py  russian_model_info.txt
tts_core/models_uz/: .gitkeep  uz_feature_extractor.py  uzbek_model_info.txt
tts_core/notebooks/: .gitkeep
tts_core/samples/: .gitkeep
tts_core/scripts/: .gitkeep  audio_format_converter.py  quality_check.py  run_tts_pipeline.sh
tts_core/test_env/: .gitkeep
tts_core/tests/: .gitkeep
tts_core/utils/: .gitkeep  readme_utils.md  utils_init.py
(+55 files in other folders)
